# plms-repeats-circuits

./: .gitignore  .gitmodules  README.md  circuit_info_neurons_old.csv  download_from_hf.py  pyproject.toml
datasets/: DATASET_FIELDS.md  README.md
docs/: index.html
plms_repeats_circuits/EAP/: README.md  ablations.py  attribute.py  circuit_selection.py  evaluate.py  graph.py  visualization.py
plms_repeats_circuits/utils/: __init__.py  corruption_utils.py  counterfactuals_config.py  esm3_output_logit_lens.py  esm_utils.py  experiment_utils.py  patching_metrics.py  per_example_utils.py  protein_similiarity_utils.py  visualization_utils.py
results8/: circuit_info_nodes.csv  circuit_info_nodes_as_first_step_for_neurons.csv  circuited1f2762-e963-45eb-9681-32be109a4f83_try_code_n10_random_state42_train_ratio0.5_EAP-IG_top_n_abs_aggsum_absFalse_metriclog_prob_nodes_as_first_step_for_neurons.csv  try_code_circuit0bac1de0-fe7b-4029-b73d-811afec034b2_n10_seed42_EAP-IG_top_n_abs_agg_sum_abs_False_metric_log_prob_graph_type_neurons.json  try_code_circuit0bac1de0-fe7b-4029-b73d-811afec034b2_n10_seed42_EAP-IG_top_n_abs_agg_sum_abs_False_metric_log_prob_graph_type_neurons_scores_per_example.npy.npz  try_code_circuit6049ddfe-143a-4015-aaaf-5003d82cfae9_n10_seed42_EAP-IG_top_n_abs_agg_sum_abs_False_metric_log_prob_graph_type_nodes.csv  try_code_circuit6049ddfe-143a-4015-aaaf-5003d82cfae9_n10_seed42_EAP-IG_top_n_abs_agg_sum_abs_False_metric_log_prob_graph_type_nodes_scores_per_example.npy.npz
scripts/attention_heads_clustering_experiments/: README.md  analyze.py  run.py  (+2 more)
(+75 files in other folders)
