[tool.poetry]
name = "plms-repeats-circuits"
version = "0.1.0" 
description = ""
authors = ["Gal Kesten <galkesten@gmail.com>"]

[tool.poetry.dependencies]
	python = "^3.10"
	numpy = "*"
	pandas = "*"
	scipy = "*"
	scikit-learn = "*"
	matplotlib = "*"
	seaborn = "*"
	tqdm = "*"
	biopython = "*"
	torchvision = "*"
	torch = { version = "*", source = "pytorch" }
	py3dmol = "*"
	esm= "3.1.1"
	beartype="*"
	einops="*"
	jaxtyping="*"
	typeguard="*"
	circuitsvis="*"
	transformer-lens = { path = "ThirdParty/TransformerLens", develop = true }
	cmapy = "*"
	ete3 = "^3.1.3"
	dna-features-viewer = "^3.1.4"
	kaleido = "0.2.1"
	statsmodels = "^0.14.4"
	umap-learn = "^0.5.9.post2"
	factor-analyzer = "^0.5.1"
	pingouin = "^0.5.5"
	torchmetrics = "^1.8.2"
plotly = "^6.5.2"
[tool.poetry.group]
	[tool.poetry.group.dev.dependencies]
		pytest = "*"
		jupyter = "*"
		pytest-cov ="*"
		pytest-doctestplus="*"
		nbstripout = "^0.8.1"
	[tool.poetry.group.jupyter.dependencies]
        ipywidgets="*"
        jupyterlab="*"
		mypy="*"
		
[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
